deploy/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: zenic-flujo
  namespace: zenic-flujo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zenic-flujo
  mtls:
    mode: STRICT
  portLevelMtls:
    8080:
      mode: STRICT
    8081:
      mode: PERMISSIVE
